--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -1,85 +1,139 @@
-
-
-<div class="dark-primary-color">
-    
-    <div class="row landing">
-
-        <div class="col s12"><h3 translate="landing.main-title"></h3></div>
-
-        <div class="col m4 s12 hide-on-med-and-down">
-            <img src="../../../assets/images/icons/home-camera-M.png" title="{{'landing.part-2.capture' | translate}}">
-            <h4 translate="landing.part-2.capture"></h4>
-        </div>
-        <div class="col m4 s12 hide-on-med-and-down">
-            <img src="../../../assets/images/icons/home-stats-M.png" title="{{'landing.part-2.analyze' | translate}}">
-            <h4 translate="landing.part-2.analyze"></h4>
-        </div>
-        <div class="col m4 s12 hide-on-med-and-down">
-            <img src="../../../assets/images/icons/home-progress-M.png" title="{{'landing.part-2.progress' | translate}}">
-            <h4 translate="landing.part-2.progress"></h4>
-        </div>    
-
-        <div class="col s12 landing-part-two white-text">
-            <div class="row">
-                <div class="col s12"><h3 translate="landing.part-2.title"></h3></div>
-
-                <div class="col s12 m4">
-                    <div class="center">
-                        <div class="accent-text-color">
-                            <img src="../../../assets/images/icons/home-store-L.png">
-                            
+<div class="hero">
+    <div class="container hero-text-container">
+        <div class="row">
+            <div class="col s12 center-align">
+                <h1 class="hero-title primary-text-color">Qaobee</h1>
+                <div class="row">
+                    <div class="col s12">
+                        <div class="center-align">
+                            <h5 class="header col s12 light" translate="landing.main-title"></h5>
                         </div>
-                        <h5 translate="landing.area-3.item-2.title" class="title"></h5>
-
-                        <p class="light left-align container" translate="landing.area-3.item-2.content"></p>
-                    </div>
-                </div>
-
-                <div class="col s12 m4">
-                    <div class="center">
-                        <div class="accent-text-color">
-                            <i class="large material-icons">stay_current_landscape</i>
-                        </div>
-
-                        <h5 translate="landing.area-3.item-0.title" class="title"></h5>
-
-                        <p class="light left-align container" translate="landing.area-3.item-0.content"></p>
-                    </div>
-                </div>
-
-                <div class="col s12 m4">
-                    <div class="center">
-                        <div class="accent-text-color">
-                            <img src="../../../assets/images/icons/home-refresh-L.png">
-                        </div>
-                        <h5 translate="landing.area-3.item-3.title" class="title"></h5>
-
-                        <p class="light left-align container" translate="landing.area-3.item-3.content"></p>
                     </div>
                 </div>
             </div>
-            
-            <div class="row">
-                <h5 class="center-align" translate="landing.area-4.content"></h5>
-                <!-- 
-                <span class="col m2 hide-on-small-only">&nbsp;</span>
-                <img class="col m3 s12 center-align" src="assets/images/appstore.png" alt="AppStore"/>
-                -->
-                <span class="col m5 hide-on-small-only">&nbsp;</span>
-                <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank">
-                    <img class="col m2 s12 center-align" src="assets/images/googleplay.png" alt="Googleplay"/>
-                </a>
-                <span class="col m5 hide-on-small-only">&nbsp;</span>
-            </div>
-
         </div>
     </div>
-    <div class="row">&nbsp;</div>
+</div>
+<div class="home section container">
+    <!--   Icon Section   -->
+    <div class="row">
+        <div class="col m6 hide-on-small-and-down">
+            <div class="home-bg1"></div>
+        </div>
 
-    <div>
-        <div class="section">
-            <div class="row">&nbsp;</div>
+        <div class="col s12 m6">
+            <h5 class="center primary-text-color">Pourquoi utiliser Qaobee</h5>
 
+            <ul class="icon-block">
+                <li>
+                    <i class="fa fa-fw fa-eye"></i>
+                    <span translate="landing.part-2.capture"></span>
+                </li>
+                <li>
+                    <i class="fa fa-fw fa-bar-chart"></i>
+                    <span translate="landing.part-2.analyze"></span>
+                </li>
+                <li>
+                    <i class="fa fa-fw fa-flag"></i>
+                    <span translate="landing.part-2.progress"></span>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<div class="home home-concept section">
+    <div class="container hero-container">
+        <div class="row">
+            <div class="col s4 center-align">
+                <div class="row">
+                    <div class="col s12">
+                        <div class="center-align">
+                            <h5 class="header col s12 light">Découvrez le concept</h5>
+                            <h6 translate="landing.area-3.item-2.title" class="title"></h6>
+                            <p class="light left-align container" translate="landing.area-3.item-2.content"></p>
+                            <h6 translate="landing.area-3.item-0.title" class="title"></h6>
+                            <p class="light left-align container" translate="landing.area-3.item-0.content"></p>
+                            <h6 translate="landing.area-3.item-3.title" class="title"></h6>
+                            <p class="light left-align container" translate="landing.area-3.item-3.content"></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="home section container">
+    <!--   Icon Section   -->
+    <div class="row">
+        <div class="col m6 hide-on-small-and-down">
+            <div class="home-bg2"></div>
+        </div>
+
+        <div class="col s12 m6">
+            <h5 class="primary-text-color">Testez Qoabee</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet ex quis nibh
+                efficitur dignissim. Quisque velit lacus, ultrices in sem vel, varius fermentum lacus.</p>
+            <div class="row">
+                <div class="col s12 m6 center">
+                    <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank"
+                       class="accent-text-color">
+                        <i class="fa fa-android fa-fw fa-2x"></i><br/>
+                        Disponible sur Google Play
+                    </a>
+                </div>
+                <div class="col s12 m6 center">
+                    <a href="#" target="_blank" class="accent-text-color">
+                        <i class="fa fa-apple fa-fw fa-2x"></i><br/>
+                        Bientôt disponible sur l'App Store
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<button data-target="modalSubMailingList" >
+    <div class="red-text text-lighten-1">
+        Newsletter
+    </div>
+</button>
+<div id="modalSubMailingList" class="modal">
+    <div class="modal-header center-align ">
+        <h5>
+            <span class="fa fa-sign-in"></span>
+            <span translate="landing.contact.popin.title"></span>
+        </h5>
+    </div>
+    <!-- Begin MailChimp Signup Form -->
+
+    <div id="mc_embed_signup">
+        <div class="modal-content grey lighten-3 ">
+            <form action="//qaobee.us13.list-manage.com/subscribe/post?u=d55c6a8036c505a3675d0b352&amp;id=883987d33d"
+                  method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank"
+                  novalidate>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <label for="mce-EMAIL" translate="landing.contact.popin.email"></label>
+                        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" class="validate"
+                               required>
+                    </div>
+                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                        <input type="text" name="b_d55c6a8036c505a3675d0b352_883987d33d" tabindex="-1" value="">
+                    </div>
+
+                </div>
+                <div class="row center">
+                    <div class="col s12">
+                        <a href="#/" class="modal-action modal-close waves-effect waves-red btn red"
+                           translate="commons.buttons.cancel"></a>
+                        <button type="submit" class="btn waves-effect waves-red  green darken-1" value="Subscribe"
+                                name="subscribe"
+                                translate="commons.buttons.validate"></button>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 </div>
