--- a/src/app/index.css
+++ b/src/app/index.css
@@ -423,6 +423,7 @@ footer.page-footer {
 .container {
     width: 90%;
 }
+
 @media only screen and (max-width: 600px) {
     .container {
         width: 90%;
@@ -433,6 +434,7 @@ footer.page-footer {
     .brand-logo {
         max-width: 30%;
     }
+
     .container {
         width: 90%;
     }
@@ -442,6 +444,7 @@ footer.page-footer {
     .brand-logo {
         max-width: 70%;
     }
+
     .container {
         width: 80%;
     }
@@ -1154,30 +1157,145 @@ footer.page-footer {
 .q-radar-chart {
     height: 300px;
 }
+
 .q-modal-chart {
     height: 200px;
 }
+
 input[type=checkbox] ~ .card-toggle {
     max-height: 0;
     opacity: 0;
     overflow: hidden;
-    -webkit-transition:all 1s ease;
-    -moz-transition:all 1s ease;
-    -o-transition:all 1s ease;
-    transition:all 1s ease;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    transition: all 1s ease;
 
 }
+
 input[type=checkbox]:checked ~ .card-toggle {
     max-height: 500px;
     opacity: 1;
 }
-input[type=checkbox] + .card-title .fa{
-     transform-origin:50% 50%;
-     -webkit-transition:all .5s ease;
-     -moz-transition:all .5s ease;
-     -o-transition:all .5s ease;
-     transition:all .5s ease;
- }
+
+input[type=checkbox] + .card-title .fa {
+    transform-origin: 50% 50%;
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+    -o-transition: all .5s ease;
+    transition: all .5s ease;
+}
+
 input[type=checkbox]:checked + .card-title .fa {
     transform: rotate(-180deg);
+}
+
+.mandatory::after {
+    padding-left: 5px !important;
+    content: "*" !important;
+    color: #F44336 !important;
+    position: relative !important;
+    opacity: 1 !important;
+    top: 0 !important;
+    display: inline !important;
+}
+
+.hero {
+    background: url("../assets/images/handball/Back02.jpeg") center center no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    height: calc(100vh - 64px);
+}
+.home-concept {
+    background: url("../assets/images/handball/Home1.png") center center no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    height: 500px;
+}
+
+@media only screen and (max-width: 600px) {
+    .hero-text-container {
+        width: 100%;
+    }
+}
+
+/* Home */
+.hero-title {
+    line-height: 1.5em;
+    margin-top: 10%;
+}
+
+div.home-bg1 {
+    height: 250px;
+    width: auto;
+    background: url("../assets/images/home2.jpg") no-repeat right bottom;
+    -webkit-background-size: cover;
+    background-size: cover;
+    margin: 0;
+    padding: 0;
+}
+div.home-bg2 {
+    height: 250px;
+    width: auto;
+    background: url("../assets/images/home3.jpg") no-repeat right bottom;
+    -webkit-background-size: cover;
+    background-size: cover;
+    margin: 0;
+    padding: 0;
+}
+
+.icon-block {
+    counter-reset: step;
+}
+
+.icon-block > li {
+    list-style-type: none;
+    width: 33%;
+    float: left;
+    font-size: 12px;
+    position: relative;
+    text-align: center;
+}
+.icon-block > li > i {
+    text-align: center;
+    position: absolute;
+    top: 25px;
+    width: 100%;
+    left: 0;
+    font-size: 30px;
+}
+
+.icon-block > li:before {
+    width: 80px;
+    height: 80px;
+    content: '';
+    line-height: 50px;
+    border: 2px solid #37474F;
+    display: block;
+    text-align: center;
+    margin: 0 auto 10px auto;
+    border-radius: 50%;
+    background-color: #ffffff;
+}
+
+.icon-block > li:after {
+    width: 100%;
+    height: 2px;
+    content: '';
+    position: absolute;
+    background-color: #37474F;
+    top: 39px;
+    left: -50%;
+    z-index: -1;
+}
+
+.icon-block > li:first-child:after {
+    content: none;
+}
+.icon-block:after {
+    display: none!important;
+}
+
+.home {
+    margin-top: 40px;
 }
