--- a/src/app/modules/commons/users/signup/signupStart.html
+++ b/src/app/modules/commons/users/signup/signupStart.html
@@ -16,10 +16,7 @@
                 <input id="firstname" name="firstname" type="text" class="validate" ng-model="signup.firstname" required
                        tabindex="1"
                        ng-pattern="'[a-zA-ZÀÁÂÃÄÅàáâãäåÒÓÔÕÖØòóôõöøÈÉÊËèéêëÇçÌÍÎÏìíîïÙÚÛÜùúûüÿÑñ -]+'">
-                <label for="firstname">
-                    {{'signupStartPage.form.label.firstname' | translate }}
-                    <span class="colorAccent-text">*</span>
-                </label>
+                <label for="firstname" class="mandatory" translate="signupStartPage.form.label.firstname"></label>
                 <span class="small colorAccent-text invalid"
                       ng-if="signupStartPageForm.firstname.$error.pattern"
                       translate="signupStartPage.form.messageControl.badchars"></span>
@@ -30,10 +27,7 @@
             <div class="col s12 m4 input-field">
                 <input id="name" name="name" type="text" class="validate" ng-model="signup.name" required tabindex="2"
                        ng-pattern="'[a-zA-ZÀÁÂÃÄÅàáâãäåÒÓÔÕÖØòóôõöøÈÉÊËèéêëÇçÌÍÎÏìíîïÙÚÛÜùúûüÿÑñ -]+'">
-                <label for="name">
-                    {{'signupStartPage.form.label.name' | translate }}
-                    <span class="colorAccent-text">*</span>
-                </label>
+                <label for="name" class="mandatory" translate="signupStartPage.form.label.name"></label>
                 <span class="small colorAccent-text invalid"
                       ng-if="signupStartPageForm.name.$error.pattern"
                       translate="signupStartPage.form.messageControl.badchars"></span>
@@ -49,10 +43,7 @@
                 <input id="login" name="login" type="text" class="validate" ng-model="signup.account.login" required
                        tabindex="3"
                        ng-pattern="'[a-zA-Z0-9_\-]{3,}'">
-                <label for="login">
-                    {{'signupStartPage.form.label.login' | translate }}
-                    <span class="colorAccent-text">*</span>
-                </label>
+                <label for="login" class="mandatory" translate="signupStartPage.form.label.login"></label>
                 <span class="small colorAccent-text invalid"
                       ng-if="signupStartPageForm.login.$error.pattern"
                       translate="signupStartPage.form.messageControl.badchars"></span>
@@ -64,10 +55,7 @@
                 <input type="text" name="email" id="email" ng-model="signup.contact.email"
                        ng-pattern="/^[a-z]+[a-z0-9._]+@[a-z]+\.[a-z.]{2,5}$/"
                        tabindex="4">
-                <label for="email">
-                    {{'signupStartPage.form.label.email' | translate }}
-                    <span class="colorAccent-text">*</span>
-                </label>
+                <label for="email" class="mandatory" translate="signupStartPage.form.label.email"></label>
                 <span ng-class="{'has-error': signupStartPageForm.email.$dirty && signupStartPageForm.email.$error.required}"
                       class="small colorAccent-text"
                       ng-if="!signupStartPageForm.email.$valid"
@@ -82,10 +70,7 @@
             <div class="col s12 m4 input-field">
                 <input id="password" type="password" class="validate" ng-model="signup.account.passwd" required
                        tabindex="5">
-                <label for="password">
-                    {{'signupStartPage.form.label.password' | translate }}
-                    <span class="colorAccent-text">*</span>
-                </label>
+                <label for="password" class="mandatory" translate="signupStartPage.form.label.password"></label>
                 <div ng-if="signup.account.passwd">
                     <small translate='signupStartPage.form.messageControl.passwdStrength'></small>
                     <div ng-hide="true" ng-password-strength="signup.account.passwd" strength="passStrength"
@@ -104,10 +89,8 @@
             <div class="col s12 m4 input-field">
                 <input id="passwordConfirm" name="passwordConfirm" type="password" class="validate"
                        ng-model="passwdConfirm" required tabindex="6" passwd-check="password">
-                <label for="passwordConfirm">
-                    {{'signupStartPage.form.label.passwordConfirm' | translate }}
-                    <span class="colorAccent-text">*</span>
-                </label>
+                <label for="passwordConfirm" class="mandatory"
+                       translate="signupStartPage.form.label.passwordConfirm"></label>
                 <span ng-if="signupStartPageForm.passwordConfirm.$dirty && signupStartPageForm.passwordConfirm.$error.pwmatch"
                       class="small colorAccent-text"
                       translate="signupStartPage.form.messageControl.password.different"></span>
@@ -131,8 +114,8 @@
         <div class="row center container">
             <div class="col s12">
                 <a ng-click="cancelSignup()"
-                        class="modal-action modal-close waves-effect waves-white btn dark-primary-color"
-                        translate="commons.buttons.cancel" tabindex="9">
+                   class="modal-action modal-close waves-effect waves-white btn dark-primary-color"
+                   translate="commons.buttons.cancel" tabindex="9">
                 </a>
                 <button type="submit"
                         translate="commons.buttons.validate" ng-disabled="signupStartPageForm.$invalid" tabindex="8"
