QHBWEB-20  : Gérer le contenu de la page home

--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -93,11 +93,7 @@
         </div>
     </div>
 </div>
-<button data-target="modalSubMailingList" >
-    <div class="red-text text-lighten-1">
-        Newsletter
-    </div>
-</button>
+<button data-target="modalSubMailingList"> Newsletter</button>
 <div id="modalSubMailingList" class="modal">
     <div class="modal-header center-align ">
         <h5>
