--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -93,11 +93,13 @@
         </div>
     </div>
 </div>
-<button data-target="modalSubMailingList"> Newsletter</button>
+<button data-target="modalSubMailingList" class="waves-effect waves-light btn-flat btn-sm accent-color mailing"><i
+        class="fa fa-envelope-o"></i> Newsletter
+</button>
 <div id="modalSubMailingList" class="modal">
     <div class="modal-header center-align ">
         <h5>
-            <span class="fa fa-sign-in"></span>
+            <i class="fa fa-envelope-o"></i>
             <span translate="landing.contact.popin.title"></span>
         </h5>
     </div>
