--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -49,11 +49,11 @@
             <div class="row">
                 <div class="col s12">
                     <div class="center-align">
-                        <h5 class="header col s12 light">Découvrez le concept</h5>
+                        <h5 class="header col s12 light" translate="landing.part-2.title"></h5>
+                        <h6 translate="landing.area-3.item-1.title" class="title"></h6>
+                        <p class="light left-align container" translate="landing.area-3.item-1.content"></p>
                         <h6 translate="landing.area-3.item-2.title" class="title"></h6>
                         <p class="light left-align container" translate="landing.area-3.item-2.content"></p>
-                        <h6 translate="landing.area-3.item-0.title" class="title"></h6>
-                        <p class="light left-align container" translate="landing.area-3.item-0.content"></p>
                         <h6 translate="landing.area-3.item-3.title" class="title"></h6>
                         <p class="light left-align container" translate="landing.area-3.item-3.content"></p>
                     </div>
@@ -93,9 +93,8 @@
         </div>
 
         <div class="col s12 m6">
-            <h5 class="primary-text-color">Testez Qoabee</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet ex quis nibh
-                efficitur dignissim. Quisque velit lacus, ultrices in sem vel, varius fermentum lacus.</p>
+            <h5 class="primary-text-color" translate="landing.area-3.item-0.title"></h5>
+            <p translate="landing.area-3.item-0.content"></p>
             <div class="row">
                 <div class="col s12 m6 center">
                     <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank"
