QHBWEB-20  : Gérer le contenu de la page home

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1250,6 +1250,12 @@ div.home-bg2 {
 .icon-block {
     counter-reset: step;
 }
+p {
+    text-align: justify;
+}
+.icon-block + p {
+    margin-top: 150px;
+}
 
 .icon-block > li {
     list-style-type: none;
