--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -23,8 +23,7 @@
         </div>
 
         <div class="col s12 m6">
-            <h5 class="center primary-text-color">Pourquoi utiliser Qaobee</h5>
-
+            <h5 class="center primary-text-color" translate="landing.area-5.title"></h5>
             <ul class="icon-block">
                 <li>
                     <i class="fa fa-fw fa-eye"></i>
@@ -39,6 +38,8 @@
                     <span translate="landing.part-2.progress"></span>
                 </li>
             </ul>
+
+            <p translate="landing.area-5.content"></p>
         </div>
     </div>
 </div>
@@ -51,11 +52,11 @@
                     <div class="center-align">
                         <h5 class="header col s12 light" translate="landing.part-2.title"></h5>
                         <h6 translate="landing.area-3.item-1.title" class="title"></h6>
-                        <p class="light left-align container" translate="landing.area-3.item-1.content"></p>
+                        <p translate="landing.area-3.item-1.content"></p>
                         <h6 translate="landing.area-3.item-2.title" class="title"></h6>
-                        <p class="light left-align container" translate="landing.area-3.item-2.content"></p>
+                        <p translate="landing.area-3.item-2.content"></p>
                         <h6 translate="landing.area-3.item-3.title" class="title"></h6>
-                        <p class="light left-align container" translate="landing.area-3.item-3.content"></p>
+                        <p translate="landing.area-3.item-3.content"></p>
                     </div>
                 </div>
             </div>
