--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -1,12 +1,14 @@
 <div class="hero">
-    <div class="container hero-text-container">
-        <div class="row">
-            <div class="col s12 center-align">
-                <img src="assets/images/logo-mini.png" height="70px" class="hero-title"/>
-                <div class="row">
-                    <div class="col s12">
-                        <div class="center-align">
-                            <h5 class="header col s12 accent-text-color" translate="landing.main-title"></h5>
+    <div class="valign-wrapper">
+        <div class="valign">
+            <div class="row">
+                <div class="col s12 center-align">
+                    <img src="assets/images/logo-mini.png" height="70px" class="hero-title"/>
+                    <div class="row">
+                        <div class="col s12">
+                            <div class="center-align">
+                                <h5 class="header col s12 accent-text-color" translate="landing.main-title"></h5>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -23,7 +25,7 @@
         </div>
 
         <div class="col s12 m6">
-            <h5 class="center primary-text-color" translate="landing.area-5.title"></h5>
+            <h4 class="center primary-text-color" translate="landing.area-5.title"></h4>
             <ul class="icon-block">
                 <li>
                     <i class="fa fa-fw fa-eye"></i>
@@ -46,18 +48,16 @@
 
 <div class="home section" id="concept">
     <div class="row">
-        <div class="col m6 s12 center-align">
+        <div class="col m6 s12">
             <div class="row">
                 <div class="col s12">
-                    <div class="center-align">
-                        <h5 class="header col s12 light" translate="landing.part-2.title"></h5>
-                        <h6 translate="landing.area-3.item-1.title" class="title"></h6>
-                        <p translate="landing.area-3.item-1.content"></p>
-                        <h6 translate="landing.area-3.item-2.title" class="title"></h6>
-                        <p translate="landing.area-3.item-2.content"></p>
-                        <h6 translate="landing.area-3.item-3.title" class="title"></h6>
-                        <p translate="landing.area-3.item-3.content"></p>
-                    </div>
+                    <h4 class="col s12 center-align" translate="landing.part-2.title"></h4>
+                    <h5 translate="landing.area-3.item-1.title"></h5>
+                    <p translate="landing.area-3.item-1.content"></p>
+                    <h5 translate="landing.area-3.item-2.title"></h5>
+                    <p translate="landing.area-3.item-2.content"></p>
+                    <h5 translate="landing.area-3.item-3.title"></h5>
+                    <p translate="landing.area-3.item-3.content"></p>
                 </div>
             </div>
         </div>
@@ -68,7 +68,7 @@
 </div>
 
 <div class="home section container center-align" id="contact">
-    <h5 class="primary-text-color" translate="landing.connect"></h5>
+    <h4 class="primary-text-color" translate="landing.connect"></h4>
     <div class="valign-wrapper">
         <ul class="social-icons center-align valign">
             <li><a href="https://twitter.com/Qaobee" target="_blank" class="accent-text-color"><i
@@ -94,7 +94,7 @@
         </div>
 
         <div class="col s12 m6">
-            <h5 class="primary-text-color" translate="landing.area-3.item-0.title"></h5>
+            <h4 class="primary-text-color" translate="landing.area-3.item-0.title"></h4>
             <p translate="landing.area-3.item-0.content"></p>
             <div class="row">
                 <div class="col s12 m6 center">
