--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -8,6 +8,11 @@
                         <div class="col s12">
                             <div class="center-align">
                                 <h5 class="header col s12 accent-text-color" translate="landing.main-title"></h5>
+                                <p class="text-white center">
+                                    <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank"
+                                                                class="waves-effect waves-light btn btn-flat secondary-color btn-sm">
+                                    <i class="fa fa-android fa-fw fa-2x"></i> {{ 'navbar.download' | translate}}
+                                </a></p>
                             </div>
                         </div>
                     </div>
@@ -85,7 +90,7 @@
     </div>
 </div>
 
-<div class="home section container">
+<div class="home section container" id="download">
     <!--   Icon Section   -->
     <div class="row">
         <div class="col m6 hide-on-small-and-down">
