--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1217,11 +1217,15 @@ input[type=checkbox]:checked + .card-title .fa {
 .hero > div > div {
     width: 100%;
 }
+
+.hero .btn {
+    margin-top: 20px;
+}
 .home-concept {
     background: url("../assets/images/handball/Home1.png") center center no-repeat;
     background-size: cover;
     -webkit-background-size: cover;
-    height: 300px;
+    height: 400px;
 }
 
 @media only screen and (max-width: 600px) {
